# tamagotchi

./: CMakeLists.txt  error_log.txt  functions.cpp  functions.h  main.cpp  sampleModule.cxx
config/: credits.md
interface/tamagotchiScreen/: tamagotchiScreen.h
mechanics/: foodMechanics.h  tamagotchiMechanics.cpp  tamagotchiMechanics.h
module_build/gcm.cache/: sampleModule.gcm
modules/: getTime.cxx
saves/: Neko.tmg  Neko.tmgfood
structures/: tamagotchi.h
